# Risuko

./: .gitignore  LICENSE  README-CN.md  README.md  app-update.yml  biome.json  components.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.renderer.config.ts
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_bug_report_cn.yml  feature_request_cn.md
.github/workflows/: publish-npm.yml  release.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING-CN.md  CONTRIBUTING.md
extra/: aria2-version.json
scripts/: bootstrap-npm-local.mjs  build-web.mjs  build.mjs  dev.mjs  set-npm-version.mjs  test-js.js  test-rpc.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.arm64.conf.json  tauri.win32.x64.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/risuko-cli/: Cargo.toml
src-tauri/risuko-cli/src/: commands.rs  main.rs  progress.rs  rpc_client.rs
src-tauri/risuko-engine/: Cargo.toml
src-tauri/risuko-engine/src/: lib.rs  traits.rs
src-tauri/risuko-engine/src/config/: defaults.rs  mod.rs
src-tauri/risuko-engine/src/engine/: events.rs  http.rs  manager.rs  mod.rs  options.rs  rpc.rs  speed_limiter.rs  task.rs  torrent.rs
src-tauri/risuko-engine/src/engine/ed2k/: chunks.rs  download.rs  mod.rs  peer.rs  protocol.rs  server.rs  server_list.rs  types.rs
src-tauri/risuko-engine/src/engine/ftp/: ftp_download.rs  sftp_download.rs
src-tauri/risuko-engine/src/engine/m3u8/: parser.rs  segment.rs
src-tauri/risuko-engine/src/engine/rss/: mod.rs
src-tauri/risuko-napi/: Cargo.toml
src-tauri/risuko-napi/src/: lib.rs
src-tauri/src/: bridge.rs  lib.rs  main.rs  state.rs
src-tauri/src/cli/: commands.rs  headless.rs  mod.rs  progress.rs  rpc_client.rs
src-tauri/src/commands/: app_cmds.rs  config_cmds.rs  engine_cmds.rs  event_cmds.rs  file_cmds.rs  mod.rs  rss_cmds.rs
src-tauri/src/config/: defaults.rs  mod.rs
src-tauri/src/engine/: events.rs  http.rs  manager.rs  mod.rs  options.rs  rpc.rs  session.rs  task.rs  torrent.rs
src-tauri/src/engine/ed2k/: chunks.rs  download.rs  mod.rs  parser.rs  peer.rs  protocol.rs  server.rs  server_list.rs  types.rs  udp.rs
src-tauri/src/engine/ftp/: ftp_download.rs  mod.rs  sftp_download.rs
src-tauri/src/engine/m3u8/: decrypt.rs  download.rs  mod.rs  parser.rs  segment.rs
src-tauri/src/engine/rss/: mod.rs  types.rs
src-tauri/src/managers/: menu.rs  mod.rs  tray.rs
src/renderer/api/: Api.ts  index.ts
src/renderer/bridge/: tauri.ts
src/renderer/components/: Main.vue
src/renderer/components/About/: AboutPanel.vue  AppInfo.vue  Copyright.vue
src/renderer/components/Aside/: Index.vue
src/renderer/components/Browser/: index.vue
src/renderer/components/CommandManager/: index.ts  instance.ts
src/renderer/components/DragSelect/: Index.vue
src/renderer/components/Dragger/: Index.vue
src/renderer/components/Locale/: index.ts
src/renderer/components/Logo/: Logo.vue  LogoMini.vue
src/renderer/components/Msg/: index.ts
src/renderer/components/Native/: DynamicTray.vue  EngineClient.vue  Ipc.vue  SelectDirectory.vue  ShowInFolder.vue  TitleBar.vue
src/renderer/components/Preference/: Advanced.vue  Basic.vue  CredentialManager.vue  HistoryDirectory.vue  Index.vue  Lab.vue  ThemeSwitcher.vue
src/renderer/components/Rss/: AddFeedDialog.vue  FeedList.vue  FeedSettingsDialog.vue  Index.vue  ItemList.vue  RulesDialog.vue
src/renderer/components/Speedometer/: Speedometer.vue
src/renderer/components/Subnav/: PreferenceSubnav.vue  SubnavSwitcher.vue  TaskSubnav.vue
src/renderer/components/Task/: AddTask.vue  CredentialSuggest.vue  Index.vue  MagnetFiles.vue  SelectTorrent.vue  TaskActions.vue  TaskItem.vue  TaskItemActions.vue  TaskList.vue  TaskProgress.vue  TaskProgressInfo.vue  TaskStatus.vue
src/renderer/components/TaskDetail/: Index.vue  TaskActivity.vue  TaskFiles.vue  TaskGeneral.vue  TaskPeers.vue  TaskTrackers.vue
src/renderer/components/TaskGraphic/: Atom.vue  Index.vue
src/renderer/components/ui/: Col.vue  LoadingOverlay.vue  NumberInput.vue  Row.vue
src/renderer/pages/index/: App.vue  commands.ts  index.html  main.ts
src/renderer/router/: index.ts
src/renderer/shims/: electron.ts  platform.ts  vite-env.d.ts  vue-runtime.d.ts
src/renderer/store/: app.ts  index.ts  preference.ts  rss.ts  task.ts
src/renderer/styles/: animations.css  app.css  global.css  reset.css  responsive.css
src/renderer/styles/components/: about.css  add-task.css  aside.css  compat.css  directory.css  graphic.css  input.css  logo.css  panel.css  preferences.css  speedometer.css  subnav.css  task-detail.css  task.css  theme-switcher.css  titlebar.css  torrent.css  tracker.css  webview.css
src/renderer/utils/: native.ts  task.ts  version.ts
src/renderer/workers/: tray.worker.ts
src/shared/: colors.json  colors.ts  configKeys.ts  constants.ts  keymap.json  ua.ts
src/shared/aria2/lib/: JSONRPCClient.ts
src/shared/locales/: LocaleManager.ts  index.ts  loader.ts
src/shared/locales/ar/: about.ts  app.ts  edit.ts  help.ts  menu.ts  preferences.ts  subnav.ts  task.ts  window.ts
src/shared/locales/bg/: about.ts  app.ts  edit.ts  help.ts  menu.ts  preferences.ts  (+2 more)
src/shared/types/: config.ts  credential.ts  global.d.ts  rss.ts  task.ts
src/shared/utils/: curl.ts  index.ts  logger.ts  rename.ts  tracker.ts  tray.ts
(+266 files in other folders)
