[package]
name = "motrix"
version = "0.1.2"
description = "A full-featured download manager"
authors = ["YueMiyuki"]
edition = "2021"

[lib]
name = "motrix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "time", "rt", "net", "macros"] }
log = "0.4"
dirs = "6"
open = "5"
trash = "5"
sha1 = "0.11"
sha2 = "0.11"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-nosleep = { git = "https://github.com/pevers/tauri-plugin-nosleep", rev = "6f6ab76ec171d075476b585282290fcf2e1c40b5" }
tauri-plugin-single-instance = "2"
librqbit = "8"
axum = { version = "0.8", features = ["ws"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
futures-util = "0.3"
rand = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream", "gzip", "brotli", "deflate"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
url = "2"
filetime = "0.2"
m3u8-rs = "6.0.0"
aes = "0.8"
cbc = "0.1"
feed-rs = "2.3.1"
regex = "1.12.3"
urlencoding = "2.1.3"
async-trait = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-rustls = "0.26"
suppaftp = { version = "6", features = ["async-rustls", "deprecated"] }
russh = "0.46"
russh-sftp = "2"
russh-keys = "0.46"

[dev-dependencies]
tempfile = "3"
