[workspace]
members = ["risuko-engine", "risuko-cli", "risuko-napi"]

[workspace.package]
version = "0.1.4"
authors = ["YueMiyuki"]
edition = "2021"

[workspace.dependencies]
risuko-engine = { path = "risuko-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "time", "rt", "net", "macros", "signal"] }
log = "0.4"
dirs = "6"
clap = { version = "4", features = ["derive"] }

[package]
name = "risuko"
version.workspace = true
description = "A full-featured download manager"
authors.workspace = true
edition.workspace = true

[lib]
name = "risuko_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
risuko-engine = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
open = "5"
trash = "5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-nosleep = { git = "https://github.com/pevers/tauri-plugin-nosleep", rev = "6f6ab76ec171d075476b585282290fcf2e1c40b5" }
tauri-plugin-single-instance = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
