[package]
name = "risuko-napi"
version.workspace = true
description = "Risuko download engine — Node.js native bindings"
authors.workspace = true
edition.workspace = true
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
risuko-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
dirs = { workspace = true }
base64 = "0.22"
napi = { version = "2", features = ["async", "serde-json", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
